---------------------------------------------------------------------------------------------------
Version: 0.11.11
Date: 2023-04-23
  Fixes:
    - Fix some typos
---------------------------------------------------------------------------------------------------
Version: 0.11.10
Date: 2023-02-12
  Changes:
    - Crafting efficiency improvements, thanks to nihilistzsche
---------------------------------------------------------------------------------------------------
Version: 0.11.9
Date: 2023-01-23
  Fixes:
    - Fix for new SE release
---------------------------------------------------------------------------------------------------
Version: 0.11.8
Date: 2023-01-17
  Fixes:
    - Add optional depenency on aai-industry to fix some mod load order discrepancies
  Features:
    - (Beta) Support for Crafting Efficieny mod
---------------------------------------------------------------------------------------------------
Version: 0.11.7
Date: 2023-01-01
  Changes:
    - Prod modules enabled for optical fiber
    - SE Space locomotives require MEMS gyro now
  Localization:
    - K2: Better string for silica processing, for ja, from Sakuro
---------------------------------------------------------------------------------------------------
Version: 0.11.6
Date: 2022-12-31
  Fixes:
    - SE/K2: Silicon with pyroflux can be made in fluid-enabled furnaces
    - Add tech tree dependency on logistic science pack
    - SE/K2: Attempt fix of issue where some mod loadouts did not have MEMS gyro in flying robot
      frame recipe. 
    - K2: Fix compatibility issue with Seb's electrics.
  Localization:
    - K2: Better string for silica processing, for en
---------------------------------------------------------------------------------------------------
Version: 0.11.5
Date: 2022-12-24
  Localization:
    - ja locale updates from Sakuro
    - de locale updates from NathanU
    - zh-CN updates from sunnytan53